<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:eclipse="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
            style="@style/settingsFragmentStyle">

	<ImageView
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:adjustViewBounds="true"
    		android:src="@drawable/inverted_googlenow" />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/inverted_googlenow"
                android:title="@string/inverted_googlenow"
                android:summary="@string/inverted_googlenow_summary"
                eclipse:url="@string/url_inverted_googlenow"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/inverted_googlenowkk"
                android:title="@string/inverted_googlenowkk"
                android:summary="@string/inverted_googlenowkk_summary"
                eclipse:url="@string/url_inverted_googlenowkk"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/normal_googlenow"
                android:title="@string/normal_googlenow"
                android:summary="@string/normal_googlenow_summary"
                eclipse:url="@string/url_normal_googlenow"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/normal_googlenowkk"
                android:title="@string/normal_googlenowkk"
                android:summary="@string/normal_googlenowkk_summary"
                eclipse:url="@string/url_normal_googlenowkk"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

    </LinearLayout>
</ScrollView>
