<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:eclipse="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
            style="@style/settingsFragmentStyle">

	<ImageView
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:adjustViewBounds="true"
    		android:src="@drawable/inverted_googleplus" />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/inverted_googleplus"
                android:title="@string/inverted_googleplus"
                android:summary="@string/inverted_googleplus_summary"
                eclipse:url="@string/url_inverted_googleplus"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/inverted_googlepluskk"
                android:title="@string/inverted_googlepluskk"
                android:summary="@string/inverted_googlepluskk_summary"
                eclipse:url="@string/url_inverted_googlepluskk"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/normal_googleplus"
                android:title="@string/normal_googleplus"
                android:summary="@string/normal_googleplus_summary"
                eclipse:url="@string/url_normal_googleplus"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/normal_googlepluskk"
                android:title="@string/normal_googlepluskk"
                android:summary="@string/normal_googlepluskk_summary"
                eclipse:url="@string/url_normal_googlepluskk"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

    </LinearLayout>
</ScrollView>
