<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:eclipse="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
            style="@style/settingsFragmentStyle">

	<ImageView
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:adjustViewBounds="true"
    		android:src="@drawable/inverted_hangouts" />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/inverted_hangouts"
                android:title="@string/inverted_hangouts"
                android:summary="@string/inverted_hangouts_summary"
                eclipse:url="@string/url_inverted_hangouts"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.eclipse.gapps.settings.UrlSetting
                android:id="@+id/normal_hangouts"
                android:title="@string/normal_hangouts"
                android:summary="@string/normal_hangouts_summary"
                eclipse:url="@string/url_normal_hangouts"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

    </LinearLayout>
</ScrollView>
